$Id$

2019-06-19  Christian Franke  <franke@computer.org>

	drivedb.h:
	- JMicron based SSDs: Transcend SSD340K, SSD740
	- Samsung based SSDs: PM863a Dell OEM (#1200)
	- Toshiba MG06ACA... Enterprise Capacity HDD (#1023, #1099)
	- Toshiba MG07ACA... Enterprise Capacity HDD (#1023, #1175)
	- WD Blue and Green SSDs: Variants without trailing -* (#1198)
	- USB: Transcend (0x8564:0x7000) (GH issues/32)

2019-06-17  Christian Franke  <franke@computer.org>

	os_win32.cpp: Clear ProtocolDataRequestSubValue for NVMe Get Log Page
	commands because newer drivers pass this value as CDW12 (LPOL) to the
	drive.  This fixes log page access for NVMe 1.2.1+ drives (#1201).

	Thanks to Vikram Manja for bug report and testing.

2019-06-12  Christian Franke  <franke@computer.org>

	os_netbsd.cpp: Fix device scan crash on empty name list.
	Fix a memory leak introduced 15 years ago in r1434.

	Thanks to Alexander Nasonov for bug report and testing.

2019-05-21  Christian Franke  <franke@computer.org>

	smartd.conf.5.in: Update list of directives which affect '-m'.
	This also fixes a typo introduced 15 years ago in r1658
	(GH issues/24).

	drivedb.h:
	- Intel 53x and Pro 1500/2500 Series SSDs: Rename, add Pro 1500 *A4H
	  variant (#1194)
	- Western Digital Red: WD100EFAX (#986, #1029)
	- Western Digital Red Pro: *003* and *FFBX variants (#1085, #1192),
	  WD101KFBX (#1030, #1189)

2019-05-21  Erwan Velu  <e.velu@criteo.com>

	drivedb.h: Intel DC S3110 Series SSDs (GH pull/35)

2019-04-30  Christian Franke  <franke@computer.org>

	os_linux.cpp: Fix '/dev/megaraid_sas_ioctl_node' open check
	(cppcheck 1.85: resourceLeak).
	Reduce variable scope (cppcheck 1.85: variableScope).
	Remove unused variable (cppcheck 1.85: unreadVariable).

	cppcheck.sh: New script to run cppcheck with predefined settings.
	Makefile.am: Add new script to tarball.  Add 'cppcheck' target.

2019-04-22  Christian Franke  <franke@computer.org>

	drivedb.h: